--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -27,7 +28,7 @@
 
         <service android:name=".service.BCShareService" />
 
-        <activity android:name=".ui.SendActivity" />
+        <activity android:name=".ui.SendActivity" android:turnScreenOn="true" />
         <activity android:name=".ui.AvailableHotspotActivity" />
         <activity android:name=".ui.ReceiverActivity"></activity>
     </application>
